--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://xdag.io">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ '/' | absolute_url }}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -33,23 +33,23 @@
                     <div class="dropdown-menu" aria-labelledby="Resources">
                         <a class="dropdown-item" href="https://github.com/XDagger/xdag/blob/master/WhitePaper.md" target="_blank">Whitepaper</a>
                         <a class="dropdown-item" href="https://github.com/XDagger/xdag/releases" target="_blank">Releases</a>
-                        <a class="dropdown-item" href="https://xdag.io//index.html#roadmap">Roadmap</a>
+                        <a class="dropdown-item" href="{{ '/index.html#roadmap' | absolute_url }}">Roadmap</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="{{ '/' | absolute_url }}">News</a>
+                    <a class="nav-link" href="{{ '/XDAG-news' | absolute_url }}">News</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="https://xdag.io/technology">Technology</a>
+                    <a class="nav-link" href="{{ '/technology' | absolute_url }}">Technology</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="Community" role="button" data-toggle="dropdown" aria-expanded="false">
                         Community
                     </a>
                     <div class="dropdown-menu" aria-labelledby="Community">
-                        <a class="dropdown-item" href="https://xdag.io/rank">Wallet Rank</a>
-                        <a class="dropdown-item" href="https://xdag.io/task">Reward Tasks</a>
-                        <a class="dropdown-item" href="https://xdag.io/hashrate">Hashrate Statistics</a>
+                        <a class="dropdown-item" href="{{ '/rank' | absolute_url }}">Wallet Rank</a>
+                        <a class="dropdown-item" href="{{ '/task' | absolute_url }}">Reward Tasks</a>
+                        <a class="dropdown-item" href="{{ '/hashrate' | absolute_url }}">Hashrate Statistics</a>
                         <a class="dropdown-item" href="https://www.coinex.com/exchange/XDAG-USDT" target="_blank">Exchanges </a>
                     </div>
                 </li>
