--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -37,7 +37,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="{{ '/XDAG-news' | absolute_url }}">News</a>
+                    <a class="nav-link" href="http://news.xdag.io/">News</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="{{ '/technology' | absolute_url }}">Technology</a>
